[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/World.gd" type="Script" id=1]
[ext_resource path="res://Assets/Audio/Generic/no passing.wav" type="AudioStream" id=2]
[ext_resource path="res://Assets/Animations/FadeIn.tres" type="Animation" id=3]
[ext_resource path="res://Assets/Animations/FadeOut.tres" type="Animation" id=4]
[ext_resource path="res://Assets/Event/AudioSystem.gd" type="Script" id=5]

[node name="World" type="Node2D"]
visible = false
z_as_relative = false
script = ExtResource( 1 )
disable_battles = true
actual_scene = "Map"
initial_position = Vector3( 0, 0, -96 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]
z_as_relative = false

[node name="CapaTerra_" type="TileMap" parent="CanvasModulate"]
z_as_relative = false
format = 1

[node name="CapaTerra2_" type="TileMap" parent="CanvasModulate"]
z_as_relative = false
format = 1

[node name="CapaTerra3_" type="TileMap" parent="CanvasModulate"]
z_as_relative = false
format = 1

[node name="Eventos_" type="YSort" parent="CanvasModulate"]
z_as_relative = false

[node name="CapaAlta_" type="TileMap" parent="CanvasModulate"]
z_as_relative = false
format = 1

[node name="MapArea_" type="Node2D" parent="CanvasModulate"]
z_as_relative = false

[node name="Areas_" type="Node2D" parent="CanvasModulate"]
z_as_relative = false

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="CanvasModulate"]
stream = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeIn = ExtResource( 3 )
anims/FadeOut = ExtResource( 4 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer" parent="."]
script = ExtResource( 5 )
sound_on = false
